# termcolor_output

derive/: Cargo.toml
derive/src/: codegen.rs  lib.rs  parse.rs
macro/: Cargo.toml
macro/src/: lib.rs
macro/tests/fails/: no_args.rs  no_args.stderr  not_a_string.rs  not_a_string.stderr  not_a_writer.rs  not_a_writer.stderr  not_enough.rs  not_enough.stderr  too_many.rs  too_many.stderr  wrong_types_args.rs  wrong_types_args.stderr
macro/tests/passes/: control_only.rs  emptyln.rs  raw_only.rs  reset_guard.rs  single.rs
