[package]
name = "termcolor_output"
version = "2.0.0"
authors = ["Cerberuser"]
edition = "2018"
description = "Interface crate for styled output to termcolor through macro."
license = "MIT"

[dependencies]
termcolor_output_impl = { path = "../derive" }
termcolor = "1.1"

[dev-dependencies]
trybuild = "1.0"
